// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`builds a ProgressTracker 1`] = `
<ol
  class="sc-bdnxRM grIqln"
  data-testid="progress-tracker"
>
  <li
    class="sc-gKAaRy cUjoIY"
  >
    <button
      class="sc-gtsrHT sc-jSFjdj hDrWzO gokOAP"
      disabled=""
    >
      <span>
        step 1
      </span>
    </button>
  </li>
  <li
    class="sc-gKAaRy cUjoIY"
  >
    <button
      class="sc-gtsrHT hDrWzO"
      disabled=""
    >
      <span>
        step 2
      </span>
    </button>
  </li>
  <li
    class="sc-gKAaRy cUjoIY"
  >
    <button
      class="sc-gtsrHT hDrWzO"
      disabled=""
    >
      <span>
        step 3
      </span>
    </button>
  </li>
</ol>
`;

exports[`builds a ProgressTracker 2`] = `
<ol
  class="sc-bdnxRM ikhgOj"
  data-testid="progress-tracker"
>
  <li
    class="sc-gKAaRy cUjoIY"
  >
    <button
      class="sc-gtsrHT sc-hKFxyN hDrWzO gIPuvl"
    >
      <span>
        step 1
      </span>
    </button>
  </li>
  <li
    class="sc-gKAaRy cUjoIY"
  >
    <button
      class="sc-gtsrHT sc-jSFjdj hDrWzO gokOAP"
      disabled=""
    >
      <span>
        step 2
      </span>
    </button>
  </li>
  <li
    class="sc-gKAaRy cUjoIY"
  >
    <button
      class="sc-gtsrHT hDrWzO"
      disabled=""
    >
      <span>
        step 3
      </span>
    </button>
  </li>
</ol>
`;

exports[`builds a ProgressTracker 3`] = `
<ol
  class="sc-bdnxRM jhafRD"
  data-testid="progress-tracker"
>
  <li
    class="sc-gKAaRy cUjoIY"
  >
    <button
      class="sc-gtsrHT sc-hKFxyN hDrWzO gIPuvl"
    >
      <span>
        step 1
      </span>
    </button>
  </li>
  <li
    class="sc-gKAaRy cUjoIY"
  >
    <button
      class="sc-gtsrHT sc-hKFxyN hDrWzO gIPuvl"
    >
      <span>
        step 2
      </span>
    </button>
  </li>
  <li
    class="sc-gKAaRy cUjoIY"
  >
    <button
      class="sc-gtsrHT sc-jSFjdj hDrWzO gokOAP"
      disabled=""
    >
      <span>
        step 3
      </span>
    </button>
  </li>
</ol>
`;
